- rare voorwaarde docenten klas > "4" verwijderd
- nieuwe filters voor excl_klas, excl_docent
- betere detectie voor actieve teams, actieve docenten
- schermuitvoer verfraaid
- variabele 'vaktotaal' hernoemd naar 'ruwegroepen'

## 20200621

* Herschreven en opgesplitst in drie modules (ophalen, transformeren, wegschrijven) in twee afzonderlijke scripts:
** `Ophalen-MagisterData.ps1`: ophalen
** `Transformeren-Naar-SchoolDataSync.ps1`: transformeren, wegschrijven
* Progressiebalken lagere updatefrequentie,
* Uitvoerlijsten worden gesorteerd.
* Dubbele docenten in teams worden voorkomen.
* Bestandsnaam van INI-file kan op commandoregel worden gespecifieerd met parameter -inifile <filename>, bij verstek 'teamsync.ini'. 
* datamappen kunnen worden gespecificeerd in Ini-bestand

## 20200623
* Pad naar leerling.csv ontbrak
* Scriptnaam in venstertitel
* Volledige vakomschrijving toegevoegd aan teamnaam
* Alle schermuitvoer wordt gelogd.

## 20200629 
* Vakomschrijvingen worden gekapitaliseerd. 
* Vakomschrijvingen toegevoegd aan teamnaam waar dit herkend wordt in lesgroep of klas-vak-groep.
* Mogelijkheid voor insluitend filteren op locatie toegevoegd
* Ondersteuning voor gevallen waar Magister login afwijkend is van Microsoft 365 / Azure AD identiteit. Als schakelaar UseEmail=1, dan wordt voor docenten het veld "Id" gevuld uit het overeenkomstig AD-userobject attribuut UserPrincipalName in Active Directory, door AD user-attribuut employeeId te matchen aan Magister stamnummer. Als schakelaar UseEmail=1, dan wordt voor leerlingen het Magister email-veld gebruikt voor de Id. 

## 20200701 
* toegevoegd: insluitend filter voor leerlingen op basis van locatie (Magister veld 'Administratieveeenheid.Omschrijving')
* useemail=1 : docenten zonder overeenkomstig emailadres worden eruit gefilterd. 

## 20200701a
* fout hersteld: Section SIS ID werd gevuld met teamnaam, niet teamID

## TO DO

* mail de logs